--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,28 +28,28 @@ ext {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile "org.parceler:parceler-api:${parcelerLibVersion}"
+    testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation "org.parceler:parceler-api:${parcelerLibVersion}"
     annotationProcessor "org.parceler:parceler:${parcelerLibVersion}"
-    compile "com.squareup.retrofit2:retrofit:${retrofit2LibVersion}"
-    compile "com.squareup.retrofit2:converter-gson:${retrofit2LibVersion}"
-    compile 'com.google.code.gson:gson:2.8.2'
-    compile "com.google.firebase:firebase-core:${firebaseLibVersion}"
+    implementation "com.squareup.retrofit2:retrofit:${retrofit2LibVersion}"
+    implementation "com.squareup.retrofit2:converter-gson:${retrofit2LibVersion}"
+    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation "com.google.firebase:firebase-core:${firebaseLibVersion}"
     implementation 'com.firebaseui:firebase-ui-auth:3.2.1'
-    compile "com.google.firebase:firebase-database:${firebaseLibVersion}"
-    debugCompile "com.readystatesoftware.chuck:library:${chuckLibVersion}"
-    releaseCompile "com.readystatesoftware.chuck:library-no-op:${chuckLibVersion}"
-    compile "com.google.firebase:firebase-auth:${firebaseLibVersion}"
-    compile 'com.google.android.gms:play-services-auth:11.8.0'
-    compile "com.google.android.exoplayer:exoplayer-core:${exoplayerLibVersion}"
-    compile "com.google.android.exoplayer:exoplayer-ui:${exoplayerLibVersion}"
+    implementation 'com.google.android.gms:play-services-auth:11.8.0'
+    implementation "com.google.firebase:firebase-database:${firebaseLibVersion}"
+    implementation "com.google.firebase:firebase-auth:${firebaseLibVersion}"
+    debugImplementation "com.readystatesoftware.chuck:library:${chuckLibVersion}"
+    releaseImplementation "com.readystatesoftware.chuck:library-no-op:${chuckLibVersion}"
+    implementation "com.google.android.exoplayer:exoplayer-core:${exoplayerLibVersion}"
+    implementation "com.google.android.exoplayer:exoplayer-ui:${exoplayerLibVersion}"
     implementation "android.arch.lifecycle:extensions:1.1.0"
-    compile 'com.facebook.stetho:stetho:1.5.0'
+    implementation 'com.facebook.stetho:stetho:1.5.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
