Removing deprecated exoplayer2 methods, adding single top in player

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
         <activity
             android:name=".main.MainActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".player.MediaPlayerActivity" />
+        <activity android:name=".player.MediaPlayerActivity"
+            android:launchMode="singleTop"/>
 
         <receiver
             android:name=".download.DownloadEpisodeReceiver"
