--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,8 +29,9 @@
         <activity
             android:name=".main.MainActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".player.MediaPlayerActivity"
-            android:launchMode="singleTop"/>
+        <activity
+            android:name=".player.MediaPlayerActivity"
+            android:launchMode="singleTop" />
 
         <receiver
             android:name=".download.DownloadEpisodeReceiver"
@@ -44,6 +45,16 @@
                 <action android:name="android.intent.action.MEDIA_BUTTON" />
             </intent-filter>
         </receiver>
+        <receiver android:name=".widget.PodcastWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/podcast_widget_info" />
+        </receiver>
+
     </application>
 
 </manifest>
