--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
+    <permission android:name="android.permission.MEDIA_CONTENT_CONTROL" />
+
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
@@ -40,7 +42,7 @@
                 <action android:name="android.intent.action.DOWNLOAD_COMPLETE" />
             </intent-filter>
         </receiver>
-        <receiver android:name=".player.MediaPlayerActivity$MediaReceiver">
+        <receiver android:name=".player.MediaPlayerService$MediaReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.MEDIA_BUTTON" />
             </intent-filter>
@@ -54,9 +56,11 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/podcast_widget_info" />
         </receiver>
+
         <service
             android:name=".widget.WidgetService"
             android:permission="android.permission.BIND_REMOTEVIEWS" />
+        <service android:name=".player.MediaPlayerService" />
 
     </application>
 
