--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
     signingConfigs {
@@ -60,7 +61,11 @@ dependencies {
     implementation "com.google.android.exoplayer:exoplayer-ui:${exoplayerLibVersion}"
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'com.facebook.stetho:stetho:1.5.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 }
 
 
 apply plugin: 'com.google.gms.google-services'
+repositories {
+    mavenCentral()
+}
