--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,7 +61,7 @@ dependencies {
     implementation "com.google.android.exoplayer:exoplayer-ui:${exoplayerLibVersion}"
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'com.facebook.stetho:stetho:1.5.0'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 
 
