--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,27 +34,26 @@ android {
 
 ext {
     retrofit2LibVersion = '2.3.0'
-    firebaseLibVersion = '12.0.1'
     chuckLibVersion = '1.1.0'
     exoplayerLibVersion = '2.6.1'
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation "com.squareup.retrofit2:retrofit:${retrofit2LibVersion}"
     implementation "com.squareup.retrofit2:converter-gson:${retrofit2LibVersion}"
-    implementation 'com.google.code.gson:gson:2.8.2'
-    implementation "com.google.firebase:firebase-core:${firebaseLibVersion}"
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation "com.google.firebase:firebase-core:16.0.9"
     implementation 'com.firebaseui:firebase-ui-auth:3.2.1'
-    implementation 'com.google.android.gms:play-services-auth:12.0.1'
-    implementation "com.google.firebase:firebase-database:${firebaseLibVersion}"
-    implementation "com.google.firebase:firebase-auth:${firebaseLibVersion}"
+    implementation 'com.google.android.gms:play-services-auth:16.0.1'
+    implementation "com.google.firebase:firebase-database:16.1.0"
+    implementation "com.google.firebase:firebase-auth:16.2.1"
     debugImplementation "com.readystatesoftware.chuck:library:${chuckLibVersion}"
     releaseImplementation "com.readystatesoftware.chuck:library-no-op:${chuckLibVersion}"
     implementation "com.google.android.exoplayer:exoplayer-core:${exoplayerLibVersion}"
