--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,11 +10,11 @@ android {
             storePassword 'android171'
         }
     }
-    compileSdkVersion 26
+    compileSdkVersion 28
     defaultConfig {
         applicationId "com.tapura.podmorecasts"
         minSdkVersion 24
-        targetSdkVersion 26
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -42,15 +42,16 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
     testImplementation 'junit:junit:4.12'
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation "com.squareup.retrofit2:retrofit:${retrofit2LibVersion}"
     implementation "com.squareup.retrofit2:converter-gson:${retrofit2LibVersion}"
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation "com.google.firebase:firebase-core:16.0.9"
-    implementation 'com.firebaseui:firebase-ui-auth:3.2.1'
+    implementation 'com.firebaseui:firebase-ui-auth:4.3.2'
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation "com.google.firebase:firebase-database:16.1.0"
     implementation "com.google.firebase:firebase-auth:16.2.1"
